# a2a-trigonometry-agent

./: README.md  client.py  main.py  pyproject.toml
src/: local_llm.py  utils.py
src/coding_agent/: code_generator.py
src/math_agent/: trigonometry_agent.py
