[project]
name = "a2a-trigonometry-agent"
version = "0.1.0"
description = "Google's A2A protocol-based trigonometry agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.22",
    "python-a2a>=0.5.9",
    "python-dotenv>=1.1.0",
]
